syntax = "proto3";

package moarpb.v1;

option go_package = "github.com/dotindustries/moar/moarpb/v1";

service ModuleRegistryService {
  rpc GetUrl(GetUrlRequest) returns (GetUrlResponse);
  rpc CreateModule(CreateModuleRequest) returns (CreateModuleResponse);
  rpc GetModule(GetModuleRequest) returns (GetModuleResponse);
  rpc DeleteModule(DeleteModuleRequest) returns (DeleteModuleResponse);
  rpc UploadVersion(UploadVersionRequest) returns (UploadVersionResponse);
  rpc DeleteVersion(DeleteVersionRequest) returns (DeleteVersionResponse);
}

message GetModuleRequest {
  string module_name = 1;
}

message GetModuleResponse {
  repeated Module module = 1;
}

message GetUrlRequest {
  string module_name = 1;
  oneof version_selector {
    string version_constraint = 2;
    string version = 3;
  }
}

message VersionResource {
  string uri = 1;
  string name = 2;
  string content_type = 3;
}

message GetUrlResponse {
  repeated VersionResource resources = 1;
  Module module = 2;
  string selected_version = 3;
}

message CreateModuleRequest {
  string module_name = 1;
  string author = 2;
  string language = 3;
}

message CreateModuleResponse {

}

message DeleteModuleRequest {
  string module_name = 1;
}

message DeleteModuleResponse {

}

message UploadVersionRequest {
  string module_name = 1;
  string version = 2;
  repeated File files = 3;
}

message UploadVersionResponse {

}

message DeleteVersionRequest {
  string module_name = 1;
  string version = 2;
}

message DeleteVersionResponse {

}

message Module {
  string name = 1;
  repeated Version versions = 2;
  string author = 3;
  string language = 4;
}

message Version {
  string name = 1;
  repeated File files = 2;
}

message File {
  string name = 1;
  string mime_type = 2;
  bytes data = 3;
}